--- a/package.json
+++ b/package.json
@@ -34,17 +34,16 @@
     "globals": {
       "extensionsToTreatAsEsm": [
         ".ts"
-      ],
-      "ts-jest": {
-        "tsconfig": "tests/tsconfig.tests.json",
-        "useESM": true
-      }
+      ]
     },
     "transform": {
-      "^.+(\\.(ts|tsx)|select-dom/.+\\.js)$": "ts-jest"
+      "^.+(\\.(ts|tsx)|(select-dom|github-url-detection)/.+\\.js)$": ["ts-jest",{
+        "tsconfig": "tests/tsconfig.tests.json",
+        "useESM": true
+      }]
     },
     "transformIgnorePatterns": [
-      "/node_modules/(?!select-dom)"
+      "node_modules/(?!select-dom|github-url-detection)"
     ],
     "testRegex": "(/tests/.*\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
@@ -65,7 +64,7 @@
   "dependencies": {
     "fastdom": "^1.0.11",
     "fs-extra": "^11.1.0",
-    "github-url-detection": "^2.0.5",
+    "github-url-detection": "^8.1.1",
     "gitly": "^2.4.0",
     "log4js": "^6.7.1",
     "react": "^17.0.1",
@@ -80,7 +79,7 @@
     "@types/chalk": "^0.4.31",
     "@types/chrome": "0.0.130",
     "@types/fs-extra": "^11.0.1",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^29.5.12",
     "@types/jest-environment-puppeteer": "^4.4.1",
     "@types/jsdom": "^16.2.6",
     "@types/node": "^14.14.27",
@@ -92,14 +91,16 @@
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "jest": "^27.0.0-next.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-puppeteer": "^10.0.1",
     "jsdom": "^16.4.0",
     "modify-json-file": "^1.2.2",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.0-next.10",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typed-jsonfile": "^0.2.1",
